--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.5.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
