--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
+    "geolib": "^3.3.4",
+    "leaflet": "^1.9.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
